# wg-systray

./: CMakeLists.txt
src/: main.cpp  main.qrc  wg-systray.desktop
